SERVER-115783 Fix error on dollar-prefix field in $sort update modifier (#45545)

GitOrigin-RevId: fd185f68619b781f19ea1ad570e0311dd4e83e48